feat: enhance Performance Bundle with new tracking and notification features
- Added HTTP status code tracking to monitor and calculate ratios for various status codes (200, 404, 500, etc.).
- Introduced a compatibility guide detailing supported Doctrine and DBAL versions, along with breaking changes.
- Implemented a notification system for performance alerts via email, Slack, Teams, and webhooks.
- Updated documentation to include new configuration options and usage examples for the notification system.
- Removed the outdated test coverage report file and improved overall code organization.

--- a/.symfony/recipe/nowo-tech/performance-bundle/0.0.1/manifest.json
+++ b/.symfony/recipe/nowo-tech/performance-bundle/0.0.1/manifest.json
@@ -1,6 +1,6 @@
 {
     "bundles": {
-        "Nowo\\PerformanceBundle\\PerformanceBundle": ["all"]
+        "Nowo\\PerformanceBundle\\NowoPerformanceBundle": ["all"]
     },
     "copy-from-recipe": {
         "config/": "%CONFIG_DIR%/"
