fix: Remove YAML middleware configuration for universal compatibility
- Removed YAML middleware configuration (middlewares/yamlMiddleware)
- YAML options not reliably available across all DoctrineBundle versions
- Some versions (like 2.17.1) don't support these options
- Changed to use only reflection-based middleware via QueryTrackingConnectionSubscriber
- Works consistently across all DoctrineBundle versions (2.x and 3.x)
- Updated DiagnoseCommand to reflect new approach
- Updated documentation (CHANGELOG, UPGRADING, COMPATIBILITY)
- Explicitly registered QueryTrackingConnectionSubscriber in services.yaml

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -81,6 +81,12 @@ services:
         tags:
             - { name: kernel.event_subscriber }
 
+    # Query Tracking Connection Subscriber (applies middleware via reflection)
+    # Uses #[AsEventListener] attribute for auto-registration, but explicit registration ensures it works
+    Nowo\PerformanceBundle\EventSubscriber\QueryTrackingConnectionSubscriber:
+        tags:
+            - { name: kernel.event_subscriber }
+
     # Notification Channels
     # Uses Autowire attributes for dependency injection
     Nowo\PerformanceBundle\Notification\Channel\EmailNotificationChannel:
