feat: Introduce performance bundle routing and enhance caching functionality
- Added a new routing configuration for the performance bundle, allowing for customizable dashboard paths and prefixes.
- Enhanced the PerformanceCacheService with methods for caching, retrieving, and invalidating cached values.
- Updated TableStatusChecker to utilize caching for table existence checks, improving performance by reducing database queries.
- Introduced a configuration option to enable or disable ranking queries in the performance dashboard, allowing for better control over resource usage.

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -52,6 +52,10 @@ services:
     # Table Status Checker
     Nowo\PerformanceBundle\Service\TableStatusChecker:
         public: true
+        calls:
+            # Optional: cache service for caching table status
+            - method: setCacheService
+              arguments: ['@?Nowo\PerformanceBundle\Service\PerformanceCacheService']
 
     # Performance Analysis Service
     Nowo\PerformanceBundle\Service\PerformanceAnalysisService:
