feat: Release version 1.0.2 with bug fixes and improvements
- Fixed modal rendering issues for Bootstrap and Tailwind templates, ensuring the correct modal is displayed based on the active template.
- Resolved `DivisionByZeroError` in correlation calculations with enhanced variance checks.
- Corrected "Unknown" status in the Data Collector, improving the accuracy of record operation messages.
- Improved `wasUpdated` logic in PerformanceMetricsService to ensure accurate state reporting.
- Updated documentation to reflect changes and provide migration steps for upgrading to version 1.0.2.

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -67,6 +67,7 @@ services:
             $repository: '@?Nowo\PerformanceBundle\Repository\RouteDataRepository'
             $kernel: '@?kernel'
             $tableStatusChecker: '@?Nowo\PerformanceBundle\Service\TableStatusChecker'
+            $dependencyChecker: '@?Nowo\PerformanceBundle\Service\DependencyChecker'
         tags:
             - { name: data_collector, template: '@NowoPerformanceBundle/Collector/performance.html.twig', id: 'performance', priority: 300 }
 
