--- a/demo/symfony8/composer.json
+++ b/demo/symfony8/composer.json
@@ -85,6 +85,7 @@
     ],
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "*",
+        "nowo-tech/twig-inspector-bundle": "^1.0",
         "symfony/debug-bundle": "8.0.*",
         "symfony/web-profiler-bundle": "8.0.*"
     }
