--- a/demo/symfony7/config/packages/nowo_performance.yaml
+++ b/demo/symfony7/config/packages/nowo_performance.yaml
@@ -29,7 +29,7 @@ when@dev:
         # Track sub-requests in addition to main requests
         # When enabled, performance metrics will be collected for both main requests and sub-requests
         # (e.g., ESI, fragments, includes). Default: false (only main requests are tracked)
-        track_sub_requests: false
+        track_sub_requests: true
 
         # Sampling rate for high-traffic routes (0.0 to 1.0, where 1.0 = 100% tracking)
         # Reduces database load for frequently accessed routes by tracking only a percentage of requests
