feat: Update performance tracking configuration and enhance logging
- Updated the performance tracking configuration to include 'prod' in the enabled environments.
- Removed the deprecated development configuration file for performance tracking.
- Enhanced logging throughout the performance metrics collection process to aid in debugging and diagnostics.
- Added comprehensive test coverage for new logging features and edge cases where data might not be saved.
- Updated documentation to reflect changes in configuration and logging capabilities.

--- a/demo/symfony7/Makefile
+++ b/demo/symfony7/Makefile
@@ -32,6 +32,7 @@ up:
 	@if [ ! -f .env ]; then \
 		echo "⚠️  .env file not found. Creating from defaults..."; \
 		echo "APP_ENV=dev" > .env; \
+		echo "APP_DEBUG=1" >> .env; \
 		echo "APP_SECRET=your-secret-key-change-this-in-production" >> .env; \
 		echo "DATABASE_URL=mysql://demo_user:password@mysql:3306/performance_demo?serverVersion=8.0&charset=utf8mb4" >> .env; \
 		echo "MYSQL_ROOT_PASSWORD=password" >> .env; \
