--- a/demo/symfony7/config/packages/nowo_performance.yaml
+++ b/demo/symfony7/config/packages/nowo_performance.yaml
@@ -1,14 +1,13 @@
 # Performance Bundle Configuration
 # Complete configuration example with all available options
 
-when@dev:
-    nowo_performance:
+nowo_performance:
         # Enable or disable performance tracking globally
         enabled: true
 
         # Environments where performance tracking is enabled
         # Only routes accessed in these environments will be tracked
-        environments: ['dev', 'test']
+        environments: ['prod', 'dev', 'test']
 
         # Doctrine connection name to use for storing metrics
         # Use 'default' for the main database connection, or specify a custom connection name
