--- a/composer.json
+++ b/composer.json
@@ -41,27 +41,24 @@
     ],
     "require": {
         "php": ">=8.1 <8.6",
-        "symfony/config": "^6.1 || ^7.0 || ^8.0",
-        "symfony/console": "^6.1 || ^7.0 || ^8.0",
-        "symfony/dependency-injection": "^6.1 || ^7.0 || ^8.0",
         "symfony/framework-bundle": "^6.1 || ^7.0 || ^8.0",
-        "symfony/http-kernel": "^6.1 || ^7.0 || ^8.0",
-        "symfony/http-client": "^6.1 || ^7.0 || ^8.0",
+        "symfony/form": "^6.1 || ^7.0 || ^8.0",
         "symfony/security-bundle": "^6.1 || ^7.0 || ^8.0",
         "symfony/stopwatch": "^6.1 || ^7.0 || ^8.0",
         "symfony/translation": "^6.1 || ^7.0 || ^8.0",
         "symfony/twig-bundle": "^6.1 || ^7.0 || ^8.0",
         "symfony/ux-twig-component": "^2.0 || ^3.0",
         "symfony/ux-icons": "^2.0 || ^3.0",
-        "symfony/yaml": "^6.1 || ^7.0 || ^8.0",
         "doctrine/orm": "^2.13 || ^3.0",
         "doctrine/doctrine-bundle": "^2.8 || ^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
         "friendsofphp/php-cs-fixer": "^3.0",
-        "rector/rector": "^0.14.8|^0.15",
-        "symfony/form": "^6.1 || ^7.0 || ^8.0"
+        "rector/rector": "^0.14.8|^0.15"
+    },
+    "suggest": {
+        "symfony/http-client": "For webhook notifications (Slack, Teams, custom webhooks)"
     },
     "autoload": {
         "psr-4": {
@@ -88,8 +85,10 @@
         "cs-fix": "php-cs-fixer fix",
         "rector": "rector process src tests --dry-run",
         "rector-fix": "rector process src tests",
+        "validate-translations": "php scripts/validate-translations-yaml.php src/Resources/translations",
         "qa": [
             "@cs-check",
+            "@validate-translations",
             "@test"
         ]
     },
@@ -100,6 +99,7 @@
         "cs-fix": "Fix code style with PHP-CS-Fixer",
         "rector": "Check code with Rector (dry-run)",
         "rector-fix": "Fix code with Rector",
+        "validate-translations": "Validate translation YAML files (syntax and duplicate keys)",
         "qa": "Run all quality assurance checks"
     }
 }
