feat: Add cache configuration to performance bundle
- Introduced a new cache configuration option for the performance bundle, allowing users to specify a custom cache pool.
- Updated related documentation to include details about the cache configuration and its default settings.
- Enhanced the service and dependency injection configuration to support the new cache feature, ensuring better performance and flexibility.

--- a/.symfony/recipe/nowo-tech/performance-bundle/0.0.1/config/packages/nowo_performance.yaml
+++ b/.symfony/recipe/nowo-tech/performance-bundle/0.0.1/config/packages/nowo_performance.yaml
@@ -100,6 +100,9 @@ nowo_performance:
             warning: 20.0  # Memory usage threshold for warning (MB)
             critical: 50.0 # Memory usage threshold for critical (MB)
 
+    cache:                            # Cache configuration (dedicated pool by default)
+        pool: 'nowo_performance.cache'
+        
     # Dashboard configuration
     dashboard:
         # Enable or disable the performance dashboard
