--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "php": ">=8.1 <8.6",
         "symfony/framework-bundle": "^6.1 || ^7.0 || ^8.0",
         "symfony/form": "^6.1 || ^7.0 || ^8.0",
+        "symfony/yaml": "^6.1 || ^7.0 || ^8.0",
         "symfony/security-bundle": "^6.1 || ^7.0 || ^8.0",
         "symfony/stopwatch": "^6.1 || ^7.0 || ^8.0",
         "symfony/translation": "^6.1 || ^7.0 || ^8.0",
