feat: Implement access records purging functionality
- Added a new command `nowo:performance:purge-records` to delete access records based on age or all records.
- Introduced configuration option `access_records_retention_days` to specify retention period for access records.
- Enhanced the Access Records UI with a form for purging records, allowing users to select purge type and specify days.
- Updated documentation to include usage instructions for the new command and configuration options.
- Improved the `PerformanceController` to handle purging requests and integrated the new form into the UI.

--- a/.symfony/recipe/nowo-tech/performance-bundle/0.0.1/config/packages/nowo_performance.yaml
+++ b/.symfony/recipe/nowo-tech/performance-bundle/0.0.1/config/packages/nowo_performance.yaml
@@ -54,6 +54,11 @@ nowo_performance:
     # Note: Enabling this will increase database storage requirements
     enable_access_records: true
 
+    # Retention period for access records (days). Records older than this can be purged.
+    # Omit or null = keep all. Use nowo:performance:purge-records command or UI to clean old records.
+    # Example: 30 to suggest keeping only the last 30 days
+    access_records_retention_days: 30
+
     # Enable or disable bundle logging
     # When disabled, no error_log() calls will be made by the bundle
     # Recommended to disable in production for better performance and reduced log noise
